# ift585

./: README.md
devoir1/: CMakeLists.txt  ProofOfConcept.cpp  ProofOfConcept2.cpp  REAMDE.md  build.sh  thread.cpp
devoir1/config/: tp1.conf
devoir1/src/: BufferGovernor.h  Config.h  DataLinkLayer.h  Frame.h  FrameUtilities.h  Hamming.h  Packet.h  PhysicalLayer.h  Signal.h  config.cpp  main.cpp  util.cpp  util.h
devoir3/: nutellaclient.rar
devoir3/TicTac/: AndroidManifest.xml  build.xml
devoir3/TicTac/src/com/example/TicTac/: MyActivity.java
devoir3/nutellaclient/: .classpath  .project  build.gradle  settings.gradle
devoir3/nutellaclient/gradle/wrapper/: gradle-wrapper.properties
devoir3/nutellaclient/src/main/java/: ClientApp.java  Connexion.java  Inscription.java  NouvelleSalle.java  Salle.java  SalleDeDiscussion.java  ServeurConnexion.java  Utilisateur.java
devoir3/nutellaclient/src/test/java/: ServeurConnexionTest.java
devoir3/nutellasrv/: .classpath  .project  build.gradle  settings.gradle
devoir3/nutellasrv/db/: init.sql  test.db  users.sql
devoir3/nutellasrv/gradle/wrapper/: gradle-wrapper.properties
devoir3/nutellasrv/src/main/java/: Message.java  Profil.java  RequestException.java  SQLiteDatabase.java  Salle.java  SalleManager.java  ServeurApp.java  ServeurRunner.java  Utilisateur.java
devoir3/nutellasrv/src/test/java/: SQLiteDatabase_test.java  SalleManager_test.java  Utilisateur_test.java
